--- a/index.html
+++ b/index.html
@@ -88,39 +88,54 @@
 
             <!-- NOTE education -->
             <div class="education">
-                <div class="ston1">
+                <div class="stone ston1">
                     <h6>Le Loi High school </h6>
-                    <p>I was learned about x y z </p>
+                    <p>I was learned about pascal , etc.. </p>
                 </div>
-                <div class="ston2">
-                    <h6>University information technology </h6>
-                    <p>I was learned about x y z </p>
+                <div class="stone ston2">
+                    <h6>Studient at UIT</h6>
+                    <p> I was trained by many 
+                        owsome Teacher , i was 
+                        learned 
+                        about OOP , Data structures , 
+                        Operating system , SQL ..etc
+                    </p>
                 </div>
 
-                <div class="ston3">
+                <div class="stone ston3">
                     <h6>Self Learn </h6>
-                    <p>I was learned about x y z </p>
+                    <p>Now , I Now, I'm learning by myself and try to improve
+                        my skills 
+                    </p>
                 </div>
             </div>
 
              <!-- NOTE Experence -->
             <div class="experience">
-                    <div class="ston1">
+                    <div class="stone ston1">
                         <h6>Front End </h6>
-                        <p>I was learned about x y z </p>
+                        <p> HTML , CSS , JS basic  </p>
                     </div>
-                    <div class="ston2">
+                    <div class="stone ston2">
                         <h6>Back End </h6>
-                        <p>I was learned about x y z </p>
+                        <p> NodeJS ( ExpressJS ), Mongodb , MySQL , Socket IO , Graphic Facebook API
+                        Graphic , Twitter API .
+                        </p>
                     </div>
     
-                    <div class="ston3">
-                        <h6>More</h6>
-                        <p>I was learned about x y z </p>
+                    <div class="stone ston3">
+                        <h6>...</h6>
+                        <p>
+                            I'm improving my skill like Git , 
+                            Deploying , Working group ,Unit Test , 
+                            .. etc <br>
+                            Beside That , I'm learing ReactJS , React Native
+                        </p>
                     </div>
                 </div>
 
         </div>
+
     </div>
 
 
